cloth or soft body crash un Undo *SERIOUS BUG, don't use undo for physics now!* fix is in svn #25427

Closed
opened 2010-12-31 11:04:10 +01:00 by chris smith · 13 comments

%%%Add any mesh at startup add cloth or soft body simulation object press control z. Blender then crashes. It reports a segmentation fault on ubuntu 10.10 and closes down.

Blender official 2.56.0 beta build revision r33949

Operating system windows 7 64bit and ubuntu 10.10

Hardware

cpu core i7 980x
graphics ati radeon 5970
installed ram 6 gig corsair

%%%

%%%Add any mesh at startup add cloth or soft body simulation object press control z. Blender then crashes. It reports a segmentation fault on ubuntu 10.10 and closes down. Blender official 2.56.0 beta build revision r33949 Operating system windows 7 64bit and ubuntu 10.10 Hardware -------------- cpu core i7 980x graphics ati radeon 5970 installed ram 6 gig corsair %%%
Author

Changed status to: 'Open'

Changed status to: 'Open'
Member

%%%Thanks for the example, I located the error and fixed in svn. It got introduced dec 21st, and it's a very bad error... shouldn't be in a release.

Basically it means that any undo with physics in Blender is dangerous. Don't do this, recompile or wait for us to update...%%%

%%%Thanks for the example, I located the error and fixed in svn. It got introduced dec 21st, and it's a very bad error... shouldn't be in a release. Basically it means that any undo with physics in Blender is dangerous. Don't do this, recompile or wait for us to update...%%%
Author

%%%Thanks for the reply Glad i could help out. I love using Blender it's a great piece of software i use it every day thanks to you and all the blender team for all the hard work. Glad this was a serious bug that was caught earlier rather than later.%%%

%%%Thanks for the reply Glad i could help out. I love using Blender it's a great piece of software i use it every day thanks to you and all the blender team for all the hard work. Glad this was a serious bug that was caught earlier rather than later.%%%
Member

%%%Argh sorry, my bad and the worst timing right before a release!

The code that caused this is now cleaned up and shouldn't cause any more problems.%%%

%%%Argh sorry, my bad and the worst timing right before a release! The code that caused this is now cleaned up and shouldn't cause any more problems.%%%
Author

%%%Thank you once again. %%%

%%%Thank you once again. %%%

%%%So... close it?%%%

%%%So... close it?%%%
Author

%%%How do i close it i am new to this.%%%

%%%How do i close it i am new to this.%%%
Member

%%%This bug is so serious that I keep it open until we have 2.56a out.%%%

%%%This bug is so serious that I keep it open until we have 2.56a out.%%%
Author

%%%Thanks Ton. I was worried that i had to close the report. I can't find any where to do that. Will the report be closed automatically or do i have to close it? If i have to do it how do i go about it ? Thanks.%%%

%%%Thanks Ton. I was worried that i had to close the report. I can't find any where to do that. Will the report be closed automatically or do i have to close it? If i have to do it how do i go about it ? Thanks.%%%
Member

%%%I will, no worries :)%%%

%%%I will, no worries :)%%%
Author

%%%Thanks for clearing up the confusion.%%%

%%%Thanks for clearing up the confusion.%%%
Member

%%%2.56a is out, closing%%%

%%%2.56a is out, closing%%%
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#25427
No description provided.