Fix for [#25427] cloth or soft body crash un Undo * Argh my bad, sorry about this! * Now only the actual data array is saved to avoid constant re-allocations, but no relations to active data are kept. * Also reverted Ton's quick fix for the crash as it's not needed anymore.